--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "boom": "^3.1.1",
     "co": "^4.6.0",
+    "kerberos": "0.0.17",
     "koa": "^2.0.0-alpha.3",
     "koa-compress": "^1.0.8",
     "koa-convert": "^1.2.0",
     "koa-router": "^7.0.0",
+    "mongoose": "^4.3.4",
     "ramda": "^0.19.0"
   },
   "author": "Pasang Sherpa <pgyalzen@gmail.com> (https://github.com/pasangsherpa)",
