--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "koa-convert": "^1.2.0",
     "koa-router": "^7.0.0",
     "mongoose": "^4.3.4",
-    "ramda": "^0.19.0"
+    "ramda": "^0.19.0",
+    "require-directory": "^2.1.1"
   },
   "author": "Pasang Sherpa <pgyalzen@gmail.com> (https://github.com/pasangsherpa)",
   "license": "MIT"
