--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "koa-router": "^7.0.0",
     "mongoose": "^4.3.4",
     "ramda": "^0.19.0",
-    "require-directory": "^2.1.1"
+    "require-directory": "^2.1.1",
+    "thunkify": "^2.1.2"
   },
   "author": "Pasang Sherpa <pgyalzen@gmail.com> (https://github.com/pasangsherpa)",
   "license": "MIT"
