--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "boom": "^3.1.1",
     "co": "^4.6.0",
+    "http-assert": "^1.1.1",
     "kerberos": "0.0.17",
     "koa": "^2.0.0-alpha.3",
     "koa-body": "^1.4.0",
