--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-body": "^1.4.0",
     "koa-compress": "^1.0.8",
     "koa-convert": "^1.2.0",
+    "koa-error": "^1.1.3",
     "koa-router": "^7.0.0",
     "mongoose": "^4.3.4",
     "ramda": "^0.19.0",
