--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "app-module-path": "^1.0.5",
     "boom": "^3.1.1",
     "co": "^4.6.0",
     "http-assert": "^1.1.1",
