--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "App to create and share meme",
   "private": true,
+  "engines": {
+    "node": "4.x"
+  },
   "scripts": {
     "start": "node app.js"
   },
@@ -17,10 +20,11 @@
     "koa-body": "^1.4.0",
     "koa-compress": "^1.0.8",
     "koa-convert": "^1.2.0",
-    "koa-error": "^1.1.3",
+    "koa-error": "git+ssh://git@github.com:pasangsherpa/error",
     "koa-router": "^7.0.0",
     "mongoose": "^4.3.4",
     "ramda": "^0.19.0",
+    "ramda-fantasy": "^0.4.1",
     "require-directory": "^2.1.1",
     "thunkify": "^2.1.2"
   },
