--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "config": "^1.17.1",
     "express": "^4.13.3",
     "http-assert": "^1.1.1",
-    "jsonapi-serializer": "^2.0.4",
+    "jsonapi-serializer": "git+ssh://git@github.com:SeyZ/jsonapi-serializer#deserializer",
     "kerberos": "0.0.17",
     "koa": "^2.0.0-alpha.3",
     "koa-body": "^1.4.0",
