--- a/package.json
+++ b/package.json
@@ -6,19 +6,15 @@
   "engines": {
     "node": "4.x"
   },
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "app-module-path": "^1.0.5",
-    "boom": "^3.1.1",
     "co": "^4.6.0",
     "config": "^1.17.1",
-    "express": "^4.13.3",
-    "http-assert": "^1.1.1",
     "jsonapi-serializer": "git+ssh://git@github.com:SeyZ/jsonapi-serializer#deserializer",
-    "kerberos": "0.0.17",
     "koa": "^2.0.0-alpha.3",
     "koa-body": "^1.4.0",
     "koa-compress": "^1.0.8",
