--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "app-module-path": "^1.0.5",
     "co": "^4.6.0",
     "config": "^1.17.1",
-    "jsonapi-serializer": "git+ssh://git@github.com:SeyZ/jsonapi-serializer#deserializer",
+    "jsonapi-serializer": "SeyZ/jsonapi-serializer.git#deserializer",
     "koa": "^2.0.0-alpha.3",
     "koa-body": "^1.4.0",
     "koa-compress": "^1.0.8",
     "koa-convert": "^1.2.0",
-    "koa-error": "git+ssh://git@github.com:pasangsherpa/error",
+    "koa-error": "pasangsherpa/error",
     "koa-router": "^7.0.0",
     "mongoose": "^4.3.4",
     "ramda": "^0.19.0",
